# wxOpenGL

./: .gitignore  README.md  example.py  pyproject.toml  setup.py
.github/workflows/: macos.yml  unix.yml  windows.yml
examples/: final_asm_asm.stp
wxOpenGL/: __init__.py  arcball.py  camera.py  canvas.py  config.py  config_panel.py  debug.py  dragging.py  errors.py  example.py  free_rotate.py  gl_materials.py  key_handler.py  model_loader.py  mouse_handler.py  object_picker.py
wxOpenGL/geometry/: angle.py  line.py  point.py
wxOpenGL/geometry/angle/: __init__.py  quaternion.py
wxOpenGL/model_loaders/: _3mf.py  __init__.py  glb.py  gltf.py  ifc.py  iges.py  obj.py  off.py  stl.py  stp.py  vrml.py
wxOpenGL/objects/: base3d.py  mesh_3mf.py  mesh_generic.py  mesh_glb.py  mesh_gltf.py  mesh_ifc.py  mesh_iges.py  mesh_model.py  mesh_obj.py  mesh_off.py  mesh_ply.py  mesh_stl.py  mesh_stp.py  mesh_vrml.py
